# tdd-flask-twitch-tutorial

./: README.md  pyproject.toml
app/: __init__.py
app/templates/: login.html
tests/: test_app.py
